# fueltune-analyzer

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  config.py  create-github-repo.sh  docker-compose.prod.yml  docker-compose.yml  fueltech_data.db  init_database.py  main.py  performance_test.py  pyproject.toml  pytest.ini  recreate_vehicles_table.py  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml
agents/: A05-3D-MAP-ANALYSIS.md  A06-3D-MAP-IMPLEMENTATION.md  A12-UNIFY-VALUES-SUBTAB-2D-3D.md
agents/pending/: FUEL-MAPS-UI-IMPLEMENTATION.md  VEHICLE-INTEGRATION-IMPLEMENTATION.md  VEHICLE-MASTER-ORCHESTRATOR.md  VEHICLE-MODEL-IMPLEMENTATION.md  VEHICLE-UI-IMPLEMENTATION.md
app/: README.md
backups/: fuel_maps_3d.py.backup  fuel_maps_3d_original_3152_lines.py  fueltune_backup_20250906_181001.db  fueltune_backup_20250910_134858_pre_unify.db
config/: map_types.json  map_types_2d.json  map_types_3d.json
data/: cache_metadata.db  fueltech_data.db  fueltune.db  map_snapshots.db
data/fuel_maps/: map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_air_temp_correction_2d_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_air_temp_correction_2d_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_main_fuel_2d_map_32_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_main_fuel_2d_map_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_main_fuel_2d_map_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_main_fuel_3d_map_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_rpm_compensation_2d_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_rpm_compensation_2d_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_rpm_compensation_2d_shared.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_temp_correction_2d_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_temp_correction_2d_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_temp_correction_2d_shared.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_tps_correction_2d_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_tps_correction_2d_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_tps_correction_2d_shared.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_voltage_correction_2d_A.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_voltage_correction_2d_B.json  map_20ee5a0d-ca56-4d3d-b6c9-f9598a647e6c_voltage_correction_2d_shared.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_main_fuel_2d_map_32_A.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_main_fuel_2d_map_A.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_main_fuel_2d_map_B.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_main_fuel_3d_map_A.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_voltage_correction_2d_A.json  map_64b12a8c-0345-41a9-bfc4-d5d360efc8ca_voltage_correction_2d_B.json
data/test_fuel_maps/: map_test_vehicle_main_fuel_3d_map_A.json
docs/: A04-STREAMLIT-PROFESSIONAL.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DATA-DICTIONARY.md  FTMANAGER-INTEGRATION-GUIDE.md  FUEL-INJECTION-CALCULATION-SPEC.md  FUEL-MAPS-3D-IMPLEMENTATION.md  FUEL-MAPS-SPECIFICATION.md  FUEL-MAPS-UI-REQUIREMENTS.md  INSTALLATION.md  INTERACTION-PROTOCOL.md  PERFORMANCE-GUIDE.md  PROJECT-DOCUMENTATION.md  PYTHON-CODE-STANDARDS.md  README.md  SECURITY.md  TECHNICAL-SPEC-PYTHON.md  USAGE.md  VERSION.md
docs/agents/: .verification-status.json  A07-LAYOUT-COMPARISON-ANALYSIS.md  README.md
environments/: .env.development  .env.example  .env.production  .env.staging
infrastructure/ansible/: playbook.yml
infrastructure/terraform/: iam.tf  main.tf  outputs.tf  resources.tf  variables.tf
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/: add_bank_columns.py  alembic.ini  env.py
migrations/versions/: 20c1d4d1f5bb_add_vehicle_model_and_relationships_.py  fuel_banks_001_add_injection_banks.py  fuel_maps_001_create_fuel_maps_tables.py  unify_core_extended_001_unify_core_and_drop_extended.py
monitoring/: alertmanager.yml  alerts.yml  grafana-dashboard.json  prometheus.yml
pages/: Performance_Monitor.py
scripts/: benchmark.py  clean.sh  cleanup_maps_metadata.py  deploy.sh  dev-server.sh  health_check.sh  makefile-demo.sh  migrate_vehicle_data.py  regenerate_ve3d.py  rollback.sh  run.sh  setup.sh  test.sh  validate-makefile.sh
scripts/database/: add_test_vehicles.py  check_db.py  init_database.py  init_fueltech_db.py
scripts/setup/: create-repo.sh  enable-sudo-nopasswd.sh
scripts/temp/: app_backup_sidebar.py  test_professional_theme.py
sphinx-docs/: Makefile  architecture.rst  build_docs.py  conf.py  data-import.rst  getting-started.rst  index.rst  installation.rst  make.bat  requirements-docs.txt
sphinx-docs/api/: index.rst
src/analysis/: __init__.py  analysis.py  anomaly.py  binning.py  confidence.py  correlation.py  dynamics.py  fuel_efficiency.py  performance.py  predictive.py  reports.py  safety.py  segmentation.py  statistics.py  suggestions.py  time_series.py
src/components/: bank_configurator.py  bank_selector.py
src/core/: __init__.py
src/data/: cache.py  complete_3d_table.py  csv_parser.py  database.py  fuel_maps_models.py  models.py  normalizer.py  quality.py  validators.py  vehicle_database.py  vehicle_validators.py
src/integration/: __init__.py  background.py  clipboard.py  clipboard_manager.py  events.py  export_import.py  format_detector.py  ftmanager_bridge.py  integration_manager.py  notifications.py  pipeline.py  plugins.py  validators.py  workflow.py
src/maps/: __init__.py  algorithms.py  editor.py  ftmanager.py  operations.py  snapshots.py  visualization.py
src/performance/: __init__.py  cache_integration.py  monitor.py  optimizer.py  profiler.py
src/ui/: theme_config.py
src/utils/: bank_calculations.py  logger.py  logging_config.py  map_interpolation.py  map_utilities.py  map_validation.py  vehicle_context.py
tests/: conftest.py  mapa.html  performance_test_analyze.py
(+137 files in other folders)
